UPC2 - adding max width and preventing wrap on the entire HTML body.

--- a/unitpricecomparison2/styles.css
+++ b/unitpricecomparison2/styles.css
@@ -7,6 +7,8 @@ body {
   font-size: 3rem;
   background-color: #F0F0F0;
   margin: 0px;
+  max-width: 70rem;
+  white-space: nowrap;
 }
 
 h3 {
@@ -17,7 +19,6 @@ h3 {
   color: #FFFFFF;
   font-weight: normal;
   vertical-align: top;
-  white-space: nowrap;
 }
 
 .unitPriceComparisonIcon {
